--- a/scss/__nine-sc.scss
+++ b/scss/__nine-sc.scss
@@ -24,6 +24,14 @@
         text-align   : center;
     }
 
+    &-label {
+        position : absolute;
+        width    : 55%;
+        top      : 50%;
+        right    : 15px;
+        transform: translateY(-50%);
+    }
+
     &-button {
         border-radius  : 25rem;
         background     : $linearGradient;
