--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ body {
 }
 
 .container {
-  max-width: 375px;
   margin: 0 auto;
   width: 100%;
   padding: 0 20px;
@@ -125,11 +124,13 @@ body {
 
 #wrapper {
   position: relative;
+  min-width: 300px;
   width: 100%;
   max-width: 575px;
   margin: 0 auto;
   -webkit-box-shadow: 0 0 20px #e0dad3;
           box-shadow: 0 0 20px #e0dad3;
+  overflow-x: hidden;
 }
 
 .w100 {
@@ -148,7 +149,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
+  width: 100%;
   z-index: 1;
 }
 
@@ -157,7 +158,7 @@ body {
 }
 
 .header__button {
-  width: 115px;
+  min-width: 115px;
   height: 25px;
   border-radius: 25rem;
   background: -webkit-gradient(linear, left top, left bottom, from(#5abba1), color-stop(71.5%, #aad936), color-stop(71.5%, #aad936), to(#cae50b));
@@ -168,6 +169,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 12px;
+  text-align: left;
+  color: #fff;
   padding: 6px 17px;
 }
 
@@ -191,8 +198,13 @@ body {
 .intro__label {
   position: absolute;
   top: 96px;
-  left: 20px;
+  left: 30px;
   width: 178px;
+  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -o-transform: scale(1.3);
 }
 
 .intro__list {
@@ -210,17 +222,21 @@ body {
   border-radius: 25rem;
   position: relative;
   z-index: 1;
-  height: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  text-align: left;
+  color: #fff;
 }
 
 .intro__item::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   left: 0;
@@ -236,25 +252,31 @@ body {
 }
 
 .intro__header::after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   left: 0;
   bottom: -1px;
   width: 100%;
   height: 117px;
-  background: -webkit-gradient(linear, left bottom, left top, from(#FFFAEE), to(transparent));
-  background: linear-gradient(to top, #FFFAEE, transparent);
+  background: -webkit-gradient(linear, left bottom, left top, from(#fffaee), to(transparent));
+  background: linear-gradient(to top, #fffaee, transparent);
 }
 
 .intro__body {
   padding-top: 40px;
-  background-color: #FFFAEE;
+  background-color: #fffaee;
 }
 
 .intro__body-text {
   margin-top: 22px;
   margin-bottom: 60px;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 28px;
+  text-align: left;
+  color: #5a5858;
 }
 
 .intro__body-button {
@@ -278,10 +300,15 @@ body {
   position: relative;
   -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.36);
           box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.36);
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .intro__body-button::before {
-  content: '';
+  content: "";
   display: block;
   width: 11px;
   height: 16px;
@@ -295,6 +322,26 @@ body {
           transform: translateY(-50%);
 }
 
+.intro__body-button small {
+  display: block;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: left;
+  color: #fff;
+}
+
+.intro__body-button span {
+  display: block;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: left;
+  color: #fff;
+}
+
 .intro .container {
   position: relative;
 }
@@ -304,7 +351,7 @@ body {
 }
 
 .first_sc .__header::before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 137px;
@@ -315,7 +362,7 @@ body {
 }
 
 .first_sc .__header::after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 60px;
@@ -323,12 +370,26 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: -webkit-gradient(linear, left bottom, left top, from(#D7EFE8), to(transparent));
-  background: linear-gradient(to top, #D7EFE8, transparent);
+  background: -webkit-gradient(linear, left bottom, left top, from(#d7efe8), to(transparent));
+  background: linear-gradient(to top, #d7efe8, transparent);
+}
+
+.first_sc .__header-subtitle {
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 28px;
+  text-align: left;
+  color: #5a5858;
+}
+
+.first_sc .__header-subtitle span {
+  display: block;
+  text-shadow: 0px 2px 5px #fff, 0px 2px 5px #fff, 0px 2px 5px #fff;
 }
 
 .first_sc .__body {
-  background: #D7EFE8;
+  background: #d7efe8;
   padding-top: 17px;
   padding-bottom: 26px;
   position: relative;
@@ -340,6 +401,16 @@ body {
 
 .first_sc .__body-subtitle {
   margin-bottom: 29px;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #5a5858;
+}
+
+.first_sc .__body-subtitle span {
+  display: block;
 }
 
 .first_sc-content {
@@ -359,9 +430,9 @@ body {
 
 .first_sc .smi__item {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 calc(100% /3 - 10px);
-          flex: 0 0 calc(100% /3 - 10px);
-  max-width: calc(100% /3);
+      -ms-flex: 0 0 calc(100% / 3 - 10px);
+          flex: 0 0 calc(100% / 3 - 10px);
+  max-width: calc(100% / 3);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -383,12 +454,12 @@ body {
 .second_sc {
   padding-top: 80px;
   padding-bottom: 20px;
-  background-color: #FFFAEE;
+  background-color: #fffaee;
   position: relative;
 }
 
 .second_sc::before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 60px;
@@ -396,16 +467,35 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#D7EFE8), to(transparent));
-  background: linear-gradient(to bottom, #D7EFE8, transparent);
+  background: -webkit-gradient(linear, left top, left bottom, from(#d7efe8), to(transparent));
+  background: linear-gradient(to bottom, #d7efe8, transparent);
 }
 
 .second_sc-title {
-  margin-bottom: 12px;
+  margin-bottom: 30px;
 }
 
-.second_sc-image {
-  margin-bottom: 16px;
+.second_sc-frame {
+  margin-bottom: 29px;
+  background: url("../images/second-sc__frame-border.png") no-repeat 0 0/cover;
+  padding: 21px 90px 19px 34px;
+  position: relative;
+}
+
+.second_sc-frame span {
+  display: block;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #5a5858;
+}
+
+.second_sc-frame .image {
+  position: absolute;
+  top: -18px;
+  right: 0;
 }
 
 .second_sc-subtitle {
@@ -413,21 +503,21 @@ body {
 }
 
 .third_sc {
-  background: #D7EFE8;
+  background: #d7efe8;
   padding-top: 103px;
   position: relative;
 }
 
 .third_sc::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   width: 100%;
   height: 107px;
   top: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FFFAEE), to(transparent));
-  background: linear-gradient(to bottom, #FFFAEE, transparent);
+  background: -webkit-gradient(linear, left top, left bottom, from(#fffaee), to(transparent));
+  background: linear-gradient(to bottom, #fffaee, transparent);
 }
 
 .third_sc-title {
@@ -446,13 +536,41 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #215F87;
+  background-color: #215f87;
   padding: 6px 14px;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: left;
+  color: #fff;
 }
 
 .third_sc .reason__item .__body {
   padding-top: 23px;
   padding-bottom: 50px;
+}
+
+.third_sc .reason__item .__body-title {
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 18px;
+  text-align: left;
+  color: #215f87;
+}
+
+.third_sc .reason__item .__body-content {
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #5a5858;
+}
+
+.third_sc .reason__item .__body-content span {
+  display: block;
 }
 
 .third_sc .reason__item .__body-image {
@@ -481,11 +599,17 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 18px;
+  text-align: left;
+  color: #215f87;
 }
 
 .third_sc .list__item {
   padding: 9px 15px;
-  border: 1px solid #4D7F9F;
+  border: 1px solid #4d7f9f;
   margin-bottom: 12px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -493,30 +617,38 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #5a5858;
 }
 
 .fourth_sc {
   padding-top: 88px;
   padding-bottom: 60px;
-  background-color: #FFFAEE;
+  background-color: #fffaee;
   position: relative;
 }
 
 .fourth_sc-title {
   margin-top: 30px;
   margin-bottom: 40px;
+  padding: 35px 22px 28px 38px;
+  background: url("../images/second-sc__frame-border.png") no-repeat 0 0/cover;
 }
 
 .fourth_sc::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   width: 100%;
   height: 107px;
   top: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#D7EFE8), to(transparent));
-  background: linear-gradient(to bottom, #D7EFE8, transparent);
+  background: -webkit-gradient(linear, left top, left bottom, from(#d7efe8), to(transparent));
+  background: linear-gradient(to bottom, #d7efe8, transparent);
 }
 
 .fourth_sc .steps__item {
@@ -525,6 +657,40 @@ body {
 
 .fourth_sc .steps__item .__title {
   margin-bottom: 30px;
+  font-family: "Noto Sans JP";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: left;
+  color: #215f87;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fourth_sc .steps__item .__title span {
+  display: inline-block;
+  margin-left: 7px;
+}
+
+.fourth_sc .steps__item .__image {
+  text-align: center;
+}
+
+.fourth_sc .steps__item .__content {
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #5a5858;
+}
+
+.fourth_sc .steps__item .__content span {
+  display: block;
 }
 
 .fourth_sc .steps__item .__image {
@@ -536,27 +702,27 @@ body {
 }
 
 .fifth_sc::before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 113px;
   position: absolute;
   top: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FFFAEE), to(transparent));
-  background: linear-gradient(to bottom, #FFFAEE, transparent);
+  background: -webkit-gradient(linear, left top, left bottom, from(#fffaee), to(transparent));
+  background: linear-gradient(to bottom, #fffaee, transparent);
 }
 
 .fifth_sc::after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 113px;
   position: absolute;
   bottom: -1px;
   left: 0;
-  background: -webkit-gradient(linear, left bottom, left top, from(#D7EFE8), to(transparent));
-  background: linear-gradient(to top, #D7EFE8, transparent);
+  background: -webkit-gradient(linear, left bottom, left top, from(#d7efe8), to(transparent));
+  background: linear-gradient(to top, #d7efe8, transparent);
 }
 
 .fifth_sc-content {
@@ -566,14 +732,56 @@ body {
   right: 0;
 }
 
+.fifth_sc-subtitle {
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #5a5858;
+  text-shadow: 0 0 4px #fff;
+  position: relative;
+}
+
+.fifth_sc-subtitle span {
+  display: block;
+}
+
+.fifth_sc-subtitle .shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 95px;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #fff;
+  filter: blur(30px);
+  -webkit-filter: blur(30px);
+}
+
 .six_sc {
   padding-top: 70px;
   padding-bottom: 28px;
-  background-color: #D7EFE8;
+  background-color: #d7efe8;
 }
 
 .six_sc-title {
   margin-bottom: 70px;
+  padding-left: 50px;
+  padding-right: 50px;
+  background: url("../images/six_sc-title-bg.png") no-repeat 0 90%;
+}
+
+.six_sc-title span {
+  display: block;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 20px;
+  text-align: center;
+  color: #fb7180;
 }
 
 .six_sc .list__item {
@@ -588,42 +796,81 @@ body {
   margin-top: 20px;
   margin-bottom: 25px;
   text-align: center;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 18px;
+  text-align: center;
+  color: #595757;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.six_sc .list__item .__title span {
+  margin-left: 4px;
+}
+
+.six_sc .list__item .__content {
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: left;
+  color: #5a5858;
+}
+
+.six_sc .list__item .__content span {
+  display: block;
 }
 
 .seven_sc {
   padding-top: 134px;
   padding-bottom: 145px;
-  background-color: #FFFAEE;
+  background-color: #fffaee;
   position: relative;
 }
 
 .seven_sc::before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 85px;
   position: absolute;
   top: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#D7EFE8), to(transparent));
-  background: linear-gradient(to bottom, #D7EFE8, transparent);
+  background: -webkit-gradient(linear, left top, left bottom, from(#d7efe8), to(transparent));
+  background: linear-gradient(to bottom, #d7efe8, transparent);
 }
 
 .seven_sc::after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 152px;
   position: absolute;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left bottom, left top, from(#D7EFE8), to(transparent));
-  background: linear-gradient(to top, #D7EFE8, transparent);
+  background: -webkit-gradient(linear, left bottom, left top, from(#d7efe8), to(transparent));
+  background: linear-gradient(to top, #d7efe8, transparent);
 }
 
 .seven_sc-title {
   text-align: center;
   margin-bottom: 54px;
+  font-family: "Noto Sans JP";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #215f87;
+  padding-bottom: 15px;
+  background: url("../images/seven_sc-title-bg.png") no-repeat 50% 90%;
 }
 
 .seven_sc-slider .splide__slide .__image {
@@ -634,35 +881,59 @@ body {
 .seven_sc-slider .splide__slide .__title {
   text-align: center;
   margin-bottom: 25px;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  text-align: center;
+  color: #595757;
+}
+
+.seven_sc-slider .splide__slide .__title span {
+  display: block;
 }
 
 .seven_sc-slider .splide__slide .__subtitle {
   text-align: center;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  text-align: center;
+  color: #595757;
+}
+
+.seven_sc-slider .splide__slide .__subtitle span {
+  display: block;
 }
 
 .seven_sc-slider .splide__arrow {
   width: 40px;
   height: 40px;
-  background-color: #E4E4E4;
+  background-color: #e4e4e4;
 }
 
 .eight_sc {
-  background-color: #D7EFE8;
+  background-color: #d7efe8;
   position: relative;
 }
 
 .eight_sc-title {
-  position: relative;
-  z-index: 1;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 54px;
+  font-family: "Noto Sans JP";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #215f87;
+  padding-bottom: 15px;
+  background: url("../images/seven_sc-title-bg.png") no-repeat 50% 90%;
 }
 
 .eight_sc .list__item {
   border-radius: 10px;
   border: 1px solid #707070;
   margin-bottom: 20px;
-  background-color: #FFFAEE;
+  background-color: #fffaee;
   position: relative;
   z-index: 1;
 }
@@ -674,16 +945,48 @@ body {
 .eight_sc .list__item .__header {
   padding: 8px;
   border-bottom: 1px solid #707070;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: block;
+  padding-left: 30px;
+  position: relative;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: left;
+  color: #595757;
+}
+
+.eight_sc .list__item .__header::before {
+  content: "Q.";
+  display: block;
+  position: absolute;
+  top: 8px;
+  left: 10px;
 }
 
 .eight_sc .list__item .__body {
   padding: 10px 22px 24px 9px;
+  padding-left: 30px;
+  position: relative;
+}
+
+.eight_sc .list__item .__body::before {
+  content: "A.";
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 14px;
+  text-align: left;
+  color: #595757;
+}
+
+.eight_sc .list__item .__body ul {
+  padding-left: 1rem;
+  list-style: disc;
+  margin-left: 10px;
 }
 
 .nine_sc {
@@ -698,15 +1001,15 @@ body {
 }
 
 .nine_sc::before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 152px;
   position: absolute;
   top: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#D7EFE8), to(transparent));
-  background: linear-gradient(to bottom, #D7EFE8, transparent);
+  background: -webkit-gradient(linear, left top, left bottom, from(#d7efe8), to(transparent));
+  background: linear-gradient(to bottom, #d7efe8, transparent);
 }
 
 .nine_sc-title {
@@ -727,7 +1030,8 @@ body {
   border-radius: 25rem;
   background: -webkit-gradient(linear, left top, left bottom, from(#5abba1), color-stop(71.5%, #aad936), color-stop(71.5%, #aad936), to(#cae50b));
   background: linear-gradient(#5abba1 0%, #aad936 71.5%, #aad936 71.5%, #cae50b 100%);
-  position: relative;
+  position: absolute;
+  bottom: 0;
   z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -739,19 +1043,22 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 8px;
-  padding-left: 80px;
-  position: relative;
   -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.36);
           box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.36);
   height: 56px;
-  position: absolute;
+  width: 100%;
   bottom: 0;
-  left: 20px;
-  right: 20px;
+  left: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  bottom: 0;
+  z-index: 100;
 }
 
 .nine_sc-button::before {
-  content: '';
+  content: "";
   display: block;
   width: 11px;
   height: 16px;
@@ -765,8 +1072,28 @@ body {
           transform: translateY(-50%);
 }
 
+.nine_sc-button small {
+  display: block;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: left;
+  color: #fff;
+}
+
+.nine_sc-button span {
+  display: block;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: left;
+  color: #fff;
+}
+
 .footer {
-  background-color: #215F87;
+  background-color: #215f87;
 }
 
 .footer .container {
@@ -774,6 +1101,17 @@ body {
   padding-bottom: 90px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.footer .link {
+  display: block;
+  font-family: "Noto Sans JP";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+  color: #fff;
+  margin-bottom: 14px;
 }
 
 .footer .copyright {
