--- a/scss/__fifth-sc.scss
+++ b/scss/__fifth-sc.scss
@@ -1,32 +1,59 @@
 .fifth_sc {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 113px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to bottom, #fffaee, transparent);
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 113px;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    background: linear-gradient(to top, #d7efe8, transparent);
+  }
+
+  &-content {
+    position: absolute;
+    top: 278px;
+    left: 0;
+    right: 0;
+  }
+  &-subtitle {
+    font-family: "Noto Sans JP";
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 25px;
+    text-align: left;
+    color: #5a5858;
+    text-shadow: 0 0 4px #fff;
     position: relative;
-
-    &::before {
-        content   : '';
-        display   : block;
-        width     : 100%;
-        height    : 113px;
-        position  : absolute;
-        top       : 0;
-        left      : 0;
-        background: linear-gradient(to bottom, #FFFAEE, transparent);
+    & span {
+        display: block;
     }
-
-    &::after {
-        content   : '';
-        display   : block;
-        width     : 100%;
-        height    : 113px;
-        position  : absolute;
-        bottom    : -1px;
-        left      : 0;
-        background: linear-gradient(to top, #D7EFE8, transparent);
-    }
-
-    &-content {
-        position: absolute;
-        top     : 278px;
-        left    : 0;
-        right   : 0;
-    }
+    & .shadow {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 95px;
+      font-family: "Noto Sans JP";
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 25px;
+      text-align: left;
+      color: #fff;
+      filter: blur(30px);
+      -webkit-filter: blur(30px);
+}
+  }
 }
