--- a/scss/__second-sc.scss
+++ b/scss/__second-sc.scss
@@ -1,30 +1,48 @@
 .second_sc {
-    padding-top     : 80px;
-    padding-bottom  : 20px;
-    background-color: #FFFAEE;
-    position        : relative;
+  padding-top: 80px;
+  padding-bottom: 20px;
+  background-color: #fffaee;
+  position: relative;
 
-    &::before {
-        content   : '';
-        display   : block;
-        width     : 100%;
-        height    : 60px;
-        position  : absolute;
-        top       : 0;
-        left      : 0;
-        right     : 0;
-        background: linear-gradient(to bottom, #D7EFE8, transparent);
-    }
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to bottom, #d7efe8, transparent);
+  }
 
-    &-title {
-        margin-bottom: 12px;
-    }
+  &-title {
+    margin-bottom: 30px;
+  }
 
-    &-image {
-        margin-bottom: 16px;
+  &-frame {
+    margin-bottom: 29px;
+    background: url("../images/second-sc__frame-border.png") no-repeat 0 0 /
+      cover;
+    padding: 21px 90px 19px 34px;
+    position: relative;
+    & span {
+      display: block;
+      font-family: "Noto Sans JP";
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 25px;
+      text-align: left;
+      color: #5a5858;
     }
+    & .image {
+      position: absolute;
+      top: -18px;
+      right: 0;
+    }
+  }
 
-    &-subtitle {
-        margin-bottom: 48px;
-    }
+  &-subtitle {
+    margin-bottom: 48px;
+  }
 }
