--- a/scss/__seven_sc.scss
+++ b/scss/__seven_sc.scss
@@ -1,62 +1,82 @@
 .seven_sc {
-    padding-top     : 134px;
-    padding-bottom  : 145px;
-    background-color: #FFFAEE;
-    position        : relative;
+  padding-top: 134px;
+  padding-bottom: 145px;
+  background-color: #fffaee;
+  position: relative;
 
-    &::before {
-        content   : '';
-        display   : block;
-        width     : 100%;
-        height    : 85px;
-        position  : absolute;
-        top       : 0;
-        left      : 0;
-        background: linear-gradient(to bottom, #D7EFE8, transparent);
-    }
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 85px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to bottom, #d7efe8, transparent);
+  }
 
-    &::after {
-        content   : '';
-        display   : block;
-        width     : 100%;
-        height    : 152px;
-        position  : absolute;
-        bottom    : 0;
-        left      : 0;
-        background: linear-gradient(to top, #D7EFE8, transparent);
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 152px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(to top, #d7efe8, transparent);
+  }
 
-    }
+  &-title {
+    text-align: center;
+    margin-bottom: 54px;
+    font-family: "Noto Sans JP";
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #215f87;
+    padding-bottom: 15px;
+    // display: inline-block;
+    background: url("../images/seven_sc-title-bg.png") no-repeat 50% 90%;
+  }
 
-    &-title {
-        text-align   : center;
-        margin-bottom: 54px;
-    }
+  &-slider {
+    & .splide__slide {
+      & .__image {
+        margin-bottom: 34px;
+        text-align: center;
+      }
 
-    &-slider {
-        & .splide__slide {
-            & .__image {
-                margin-bottom: 34px;
-                text-align   : center;
-            }
-
-            & .__title {
-                text-align   : center;
-                margin-bottom: 25px;
-            }
-
-            & .__subtitle {
-                text-align: center;
-            }
-
-
+      & .__title {
+        text-align: center;
+        margin-bottom: 25px;
+        font-family: "Noto Sans JP";
+        font-weight: normal;
+        font-size: 14px;
+        text-align: center;
+        color: #595757;
+        & span {
+          display: block;
         }
+      }
 
-        & .splide__arrow {
-            width           : 40px;
-            height          : 40px;
-            background-color: #E4E4E4;
-
-
+      & .__subtitle {
+        text-align: center;
+        font-family: "Noto Sans JP";
+        font-weight: normal;
+        font-size: 14px;
+        text-align: center;
+        color: #595757;
+        & span {
+          display: block;
         }
+      }
     }
+
+    & .splide__arrow {
+      width: 40px;
+      height: 40px;
+      background-color: #e4e4e4;
+    }
+  }
 }
