--- a/css/style.css
+++ b/css/style.css
@@ -197,9 +197,12 @@ body {
 
 .intro__label {
   position: absolute;
-  top: 96px;
-  left: 30px;
+  top: 110px;
+  left: 50px;
   width: 178px;
+}
+
+.intro__label img {
   transform: scale(1.3);
   -webkit-transform: scale(1.3);
   -moz-transform: scale(1.3);
@@ -344,6 +347,20 @@ body {
 
 .intro .container {
   position: relative;
+}
+
+@media (max-width: 376px) {
+  .intro__label {
+    top: 96px;
+    left: 30px;
+  }
+  .intro__label img {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
 }
 
 .first_sc .__header {
