--- a/scss/__footer.scss
+++ b/scss/__footer.scss
@@ -23,5 +23,11 @@
     justify-content: center;
     display: flex;
     align-items: center;
+    font-family: "Noto Sans JP";
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: left;
+    color: #fff;
   }
 }
