--- a/css/style.css
+++ b/css/style.css
@@ -490,13 +490,32 @@ body {
 
 .second_sc-title {
   margin-bottom: 30px;
+  max-width: 335px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .second_sc-frame {
   margin-bottom: 29px;
-  background: url("../images/second-sc__frame-border.png") no-repeat 0 0/cover;
-  padding: 21px 90px 19px 34px;
+  border: 2px solid #707070;
+  border-right: 0;
+  padding: 21px 100px 19px 34px;
   position: relative;
+  max-width: 335px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.second_sc-frame:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  right: 4px;
+  bottom: 4px;
+  border: 2px solid #707070;
+  border-right: 0;
 }
 
 .second_sc-frame span {
@@ -513,6 +532,20 @@ body {
   position: absolute;
   top: -18px;
   right: 0;
+  z-index: 1;
+}
+
+.second_sc-frame .leftLeave {
+  position: absolute;
+  left: -10px;
+  bottom: 0;
+  background: #fffaee;
+}
+
+.second_sc-frame .rightLeave {
+  position: absolute;
+  top: 10px;
+  right: -10px;
 }
 
 .second_sc-subtitle {
@@ -653,7 +686,33 @@ body {
   margin-top: 30px;
   margin-bottom: 40px;
   padding: 35px 22px 28px 38px;
-  background: url("../images/second-sc__frame-border.png") no-repeat 0 0/cover;
+  border: 2px solid #595757;
+}
+
+.fourth_sc-title::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
+  border: 2px solid #595757;
+}
+
+.fourth_sc-title .leftLeave {
+  position: absolute;
+  left: -13px;
+  bottom: 0;
+  background: #fffaee;
+}
+
+.fourth_sc-title .rightLeave {
+  position: absolute;
+  padding-top: 5px;
+  top: -2px;
+  right: -13px;
+  background: #fffaee;
 }
 
 .fourth_sc::before {
@@ -750,33 +809,25 @@ body {
 }
 
 .fifth_sc-subtitle {
+  width: 60%;
+  font-family: "Noto Sans JP";
+  font-weight: normal;
   font-family: "Noto Sans JP";
   font-weight: normal;
   font-size: 14px;
   line-height: 25px;
   text-align: left;
   color: #5a5858;
-  text-shadow: 0 0 4px #fff;
-  position: relative;
+  text-shadow: 0px 0px 2px #ffffff, 0 0px 4px #ffffff, -8px 0px 6px rgba(255, 255, 255, 0.9), 8px 0px 6px white, -8px 0px 7px white, -8px -4px 6px white, -8px 4px 6px white, -8px -2px 6px white, -8px 2px 6px white;
+  /* blue */
 }
 
 .fifth_sc-subtitle span {
   display: block;
 }
 
-.fifth_sc-subtitle .shadow {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 95px;
-  font-family: "Noto Sans JP";
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 25px;
-  text-align: left;
-  color: #fff;
-  filter: blur(30px);
-  -webkit-filter: blur(30px);
+.fifth_sc-subtitle span:last-child {
+  text-align: right;
 }
 
 .six_sc {
@@ -789,7 +840,33 @@ body {
   margin-bottom: 70px;
   padding-left: 50px;
   padding-right: 50px;
-  background: url("../images/six_sc-title-bg.png") no-repeat 0 90%;
+  position: relative;
+}
+
+.six_sc-title::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 26px;
+  height: 70px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url("../images/six_sc-title-leftImg.svg") no-repeat 0 0/cover;
+}
+
+.six_sc-title::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 32px;
+  height: 70px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url("../images/six_sc-title-imgRight.svg") no-repeat 0 0/cover;
 }
 
 .six_sc-title span {
@@ -1143,5 +1220,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "Noto Sans JP";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
