--- a/scss/__second-sc.scss
+++ b/scss/__second-sc.scss
@@ -18,14 +18,32 @@
 
   &-title {
     margin-bottom: 30px;
+    max-width: 335px;
+    margin-left:  auto;
+    margin-right: auto;
   }
 
   &-frame {
     margin-bottom: 29px;
-    background: url("../images/second-sc__frame-border.png") no-repeat 0 0 /
-      cover;
-    padding: 21px 90px 19px 34px;
+    //background: url("../images/second-sc__frame-border.png") no-repeat 0 0 /    //   100%;
+    border: 2px solid #707070;
+    border-right: 0;
+    padding: 21px 100px 19px 34px;
     position: relative;
+    max-width: 335px;
+    margin-left: auto;
+    margin-right: auto;
+    &:before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      right: 4px;
+      bottom: 4px;
+      border: 2px solid #707070;
+      border-right: 0;
+    }
     & span {
       display: block;
       font-family: "Noto Sans JP";
@@ -39,6 +57,18 @@
       position: absolute;
       top: -18px;
       right: 0;
+      z-index: 1;
+    }
+    & .leftLeave {
+      position: absolute;
+      left: -10px;
+      bottom: 0;
+      background: #fffaee;
+    }
+    & .rightLeave {
+      position: absolute;
+      top: 10px;
+      right: -10px;
     }
   }
 
