--- a/scss/__first-sc.scss
+++ b/scss/__first-sc.scss
@@ -24,6 +24,9 @@
       right: 0;
       background: linear-gradient(to top, #d7efe8, transparent);
     }
+    &-title {
+      margin-bottom: 16px;
+    }
     &-subtitle {
       font-family: "Noto Sans JP";
       font-weight: normal;
