--- a/scss/__intro.scss
+++ b/scss/__intro.scss
@@ -26,7 +26,7 @@
 
   &__item {
     padding-left: 54px;
-    background-color: rgba($color: #4d7f9f, $alpha: 1);
+    background-color: rgba($color: #4d7f9f, $alpha: .9);
     margin-bottom: 20px;
     border-radius: 25rem;
     position: relative;
@@ -54,7 +54,7 @@
 
   &__header {
     position: relative;
-
+    height: 543px;
     &::after {
       content: "";
       display: block;
@@ -66,7 +66,14 @@
       background: linear-gradient(to top, #fffaee, transparent);
     }
   }
-
+&_background{
+  height: 100%;
+  & img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
   &__body {
     padding-top: 40px;
     background-color: #fffaee;
