--- a/scss/__second-sc.scss
+++ b/scss/__second-sc.scss
@@ -19,7 +19,7 @@
   &-title {
     margin-bottom: 30px;
     max-width: 335px;
-    margin-left:  auto;
+    margin-left: auto;
     margin-right: auto;
   }
 
@@ -74,5 +74,11 @@
 
   &-subtitle {
     margin-bottom: 48px;
+    font-family: "Noto Sans JP";
+    font-weight: normal;
+    font-size: 11px;
+    line-height: 18px;
+    text-align: left;
+    color: #5a5858;
   }
 }
