--- a/scss/__six-sc.scss
+++ b/scss/__six-sc.scss
@@ -14,7 +14,7 @@
       position: absolute;
       top: 50%;
       left: 0;
-      width: 26px;
+      width: 29px;
       height: 70px;
       transform: translateY(-50%);
       background: url("../images/six_sc-title-leftImg.svg") no-repeat 0 0 /
@@ -37,6 +37,7 @@
       font-family: "Noto Sans JP";
       font-weight: normal;
       font-size: 20px;
+      line-height: 29px;
       text-align: center;
       color: #fb7180;
     }
