--- a/css/style.css
+++ b/css/style.css
@@ -492,6 +492,7 @@ body {
   background-color: #fff;
   margin-right: 10px;
   margin-bottom: 10px;
+  padding: 12px;
 }
 
 .first_sc .smi__item:nth-child(3n) {
