--- a/scss/__first-sc.scss
+++ b/scss/__first-sc.scss
@@ -90,7 +90,7 @@
       background-color: #fff;
       margin-right: 10px;
       margin-bottom: 10px;
-
+      padding: 12px;
       &:nth-child(3n) {
         margin-right: 0;
       }
